force-app/main/default/objects/SAC_MaestroTipologiasAlertas__mdt/SAC_MaestroTipologiasAlertas__mdt.object-meta.xml
<CustomObject>
    <description>Maestro para parametrizar las alertas de SAC</description>
    <label>Maestro de tipologías de alertas</label>
    <pluralLabel>Maestros de tipologías de alertas</pluralLabel>
</CustomObject>