force-app/main/default/objects/SAC_MaestroTipologiasAlertas__mdt/fields/SAC_Condiciones__c.field-meta.xml
<CustomField>
    <fullName>SAC_Condiciones__c</fullName>
    <description>Condiciones por las que una alerta se debe seleccionar</description>
    <label>Condiciones</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>