force-app/main/default/objects/SAC_MaestroTipologiasAlertas__mdt/fields/SAC_Destinatarios__c.field-meta.xml
<CustomField>
    <fullName>SAC_Destinatarios__c</fullName>
    <description>Lista de campos donde se encuentran los destinatarios a los que enviar los mails</description>
    <label>Destinatarios</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>