force-app/main/default/objects/SAC_MaestroTipologiasAlertas__mdt/fields/SAC_Notifica_Colaboradores__c.field-meta.xml
<CustomField>
    <fullName>SAC_Notifica_Colaboradores__c</fullName>
    <defaultValue>true</defaultValue>
    <description>flag para activar en esa alerta que notifique con la campana a todos los integrantes del grupo colaborador</description>
    <label>Notifica Colaboradores</label>
    <type>Checkbox</type>
</CustomField>