force-app/main/default/objects/SAC_MaestroTipologiasAlertas__mdt/fields/SAC_NotiPlantillaHTML__c.field-meta.xml
<CustomField>
    <fullName>SAC_NotiPlantillaHTML__c</fullName>
    <defaultValue>false</defaultValue>
    <description>si este campo viene con el check a true, el código cogerá la plantilla configurada para el envío de email, quitará los tags y lo meterá como notificación.</description>
    <label>Notificación Plantilla HTML</label>
    <type>Checkbox</type>
</CustomField>