force-app/main/default/objects/SAC_MaestroTipologiasAlertas__mdt/fields/SAC_OrgWideAddress__c.field-meta.xml
<CustomField>
    <fullName>SAC_OrgWideAddress__c</fullName>
    <description>Campo para especificar que org wide adress se va a utilizar como remitente del envío de email</description>
    <label>Org Wide Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>