force-app/main/default/objects/SAC_MaestroTipologiasAlertas__mdt/fields/SAC_PararEjecucion__c.field-meta.xml
<CustomField>
    <fullName>SAC_PararEjecucion__c</fullName>
    <description>Número de horas en la que la reprogramación de la alerta debe ser parada aunque se cumplan las condiciones para ejecutarla. Debe estar informada en la última plantilla de la cadena de ejecución. Si no se informa se ejecutará repetidamente hasta que no se cumplan las condiciones para continuar ejecutándose.</description>
    <label>Parar Ejecución</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>