force-app/main/default/objects/SAC_MaestroTipologiasAlertas__mdt/fields/SAC_Plantilla__c.field-meta.xml
<CustomField>
    <fullName>SAC_Plantilla__c</fullName>
    <description>Configuración mediante el developer name de las plantillas contenidas en el objeto email template</description>
    <label>Plantilla</label>
    <length>80</length>
    <type>Text</type>
</CustomField>