force-app/main/default/objects/SAC_MaestroTipologiasAlertas__mdt/fields/SAC_Prioridad__c.field-meta.xml
<CustomField>
    <fullName>SAC_Prioridad__c</fullName>
    <description>prioridad de la ejecucion de las posibles alertas por tipología</description>
    <label>Prioridad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>