force-app/main/default/objects/SAC_MaestroTipologiasAlertas__mdt/fields/SAC_RequiereAlerta__c.field-meta.xml
<CustomField>
    <fullName>SAC_RequiereAlerta__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si requiere alerta (visualización registro)</description>
    <label>Requiere alerta</label>
    <type>Checkbox</type>
</CustomField>