force-app/main/default/objects/SAC_MaestroTipologiasAlertas__mdt/fields/SAC_RequiereEmail__c.field-meta.xml
<CustomField>
    <fullName>SAC_RequiereEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si requiere email (envío email con notificación)</description>
    <label>Requiere email</label>
    <type>Checkbox</type>
</CustomField>