force-app/main/default/objects/SAC_MaestroTipologiasAlertas__mdt/fields/SAC_RequiereNotificacion__c.field-meta.xml
<CustomField>
    <fullName>SAC_RequiereNotificacion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si esta alerta requiere una notificación (campanita)</description>
    <label>Requiere notificación</label>
    <type>Checkbox</type>
</CustomField>