force-app/main/default/objects/SAC_MaestroTipologiasAlertas__mdt/fields/SAC_Texto_Notificacion__c.field-meta.xml
<CustomField>
    <fullName>SAC_Texto_Notificacion__c</fullName>
    <description>texto para la notificacion de la campanita, en caso que no venga informado se cogerá el de la plantilla, si la plantilla tampoco viene informada el texto se tendrá que poner de manera externa al construir el objeto sac_alertas</description>
    <label>Texto Notificacion</label>
    <length>750</length>
    <type>LongTextArea</type>
</CustomField>