force-app/main/default/objects/SAC_MaestroTipologiasAlertas__mdt/fields/SAC_TiempoEjecucion__c.field-meta.xml
<CustomField>
    <fullName>SAC_TiempoEjecucion__c</fullName>
    <description>Numero de horas en el que la plantilla a la que apunta este registro debe ser procesada después de su primera programación en el schedulable process</description>
    <label>Tiempo Ejecución</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>