force-app/main/default/objects/SAC_MaestroTipologiasAlertas__mdt/fields/SAC_Tipo__c.field-meta.xml
<CustomField>
    <fullName>SAC_Tipo__c</fullName>
    <description>Tipo de alerta</description>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAC_001</fullName>
                <default>true</default>
                <label>Respuesta a la subsanación</label>
            </value>
            <value>
                <fullName>SAC_002</fullName>
                <label>Respuesta a la negociación</label>
            </value>
            <value>
                <fullName>SAC_003</fullName>
                <label>Consulta pendiente de respuesta</label>
            </value>
            <value>
                <fullName>SAC_004</fullName>
                <label>Tarea atendida</label>
            </value>
            <value>
                <fullName>SAC_005</fullName>
                <label>Nuevo caso con mismo cliente</label>
            </value>
            <value>
                <fullName>SAC_006</fullName>
                <label>Nuevo correo asociado a la reclamación</label>
            </value>
            <value>
                <fullName>SAC_007</fullName>
                <label>Alerta SLA</label>
            </value>
            <value>
                <fullName>SAC_008</fullName>
                <label>Caso derivado</label>
            </value>
            <value>
                <fullName>SAC_009</fullName>
                <label>Nuevo gestor reclamación</label>
            </value>
            <value>
                <fullName>SAC_010</fullName>
                <label>Reclamación en ejecución</label>
            </value>
            <value>
                <fullName>SAC_011</fullName>
                <label>Devolución reclamación a alta</label>
            </value>
            <value>
                <fullName>SAC_012</fullName>
                <label>Consulta realizada a colaborador</label>
            </value>
            <value>
                <fullName>SAC_013</fullName>
                <label>Escalado atendido</label>
            </value>
            <value>
                <fullName>SAC_014</fullName>
                <label>Nuevo propietario del caso</label>
            </value>
            <value>
                <fullName>SAC_015</fullName>
                <label>Consulta vinculada a la reclamación</label>
            </value>
            <value>
                <fullName>SAC_016</fullName>
                <label>Notificacion de tarea</label>
            </value>
            <value>
                <fullName>SAC_017</fullName>
                <label>Reclamación vinculada creada</label>
            </value>
            <value>
                <fullName>SAC_018</fullName>
                <label>Reapertura CC</label>
            </value>
            <value>
                <fullName>SAC_019</fullName>
                <label>Negociación inactiva</label>
            </value>
            <value>
                <fullName>SAC_020</fullName>
                <label>Subsanación inactiva</label>
            </value>
            <value>
                <fullName>SAC_021</fullName>
                <label>Tarea atendida por GGH</label>
            </value>
            <value>
                <fullName>SAC_022</fullName>
                <label>Consulta respondida</label>
            </value>
            <value>
                <fullName>SAC_023</fullName>
                <label>Escalado devuelto</label>
            </value>
            <value>
                <fullName>SAC_024</fullName>
                <label>Caso pendiente envío prórroga</label>
            </value>
            <value>
                <fullName>SPV_001</fullName>
                <label>SPV Devolución reclamación a Alta</label>
            </value>
            <value>
                <fullName>SPV_002</fullName>
                <label>SPV Cambio Estado Análisis a Envío Organismo</label>
            </value>
            <value>
                <fullName>SPV_003</fullName>
                <label>SPV Devolución desde estado Envío Organismo a Análisis</label>
            </value>
            <value>
                <fullName>SPV_004</fullName>
                <label>SPV Consulta pendiente de respuesta</label>
            </value>
            <value>
                <fullName>SPV_005</fullName>
                <label>SPV Consulta respondida</label>
            </value>
            <value>
                <fullName>SPV_006</fullName>
                <label>SPV Nuevo escalado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>