force-app/main/default/objects/SAC_MaestroTipologiasAlertas__mdt/fields/SAC_Titulo_Notificacion__c.field-meta.xml
<CustomField>
    <fullName>SAC_Titulo_Notificacion__c</fullName>
    <description>título para la notificación de la campanita, en caso que no venga informado se cogerá el de la plantilla, si la plantilla tampoco viene informada el texto se tendrá que poner de manera externa al construir el objeto sac_alertas</description>
    <label>Título Notificación</label>
    <length>250</length>
    <type>Text</type>
</CustomField>