force-app/main/default/objects/SAC_MaestroTipologiasAlertas__mdt/listViews/Resumen_alertas.listView-meta.xml
<ListView>
    <fullName>Resumen_alertas</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>SAC_RequiereAlerta__c</columns>
    <columns>SAC_RequiereEmail__c</columns>
    <columns>SAC_RequiereNotificacion__c</columns>
    <columns>SAC_Tipo__c</columns>
    <filterScope>Everything</filterScope>
    <label>Resumen alertas</label>
    <language>en_US</language>
</ListView>