force-app/main/default/objects/SAC_MaestroTipologiasAlertas__mdt/listViews/SPV_Alertas.listView-meta.xml
<ListView>
    <fullName>SPV_Alertas</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>SAC_RequiereAlerta__c</columns>
    <columns>SAC_RequiereEmail__c</columns>
    <columns>SAC_RequiereNotificacion__c</columns>
    <columns>SAC_Tipo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DeveloperName</field>
        <operation>contains</operation>
        <value>SPV_</value>
    </filters>
    <label>SPV Alertas</label>
    <language>en_US</language>
</ListView>